--- a/src/weather.css
+++ b/src/weather.css
@@ -1,3 +1,51 @@
 .Weather {
     border: 1px solid #dadde1;
+    font-family: arial, sans-serif;
+    padding: 16px;
+    border-radius: 4px;
+    color: rgb(135, 135, 135);
+}
+
+.Weather h1 {
+    font-size: 24px;
+    font-weight: 100;
+    margin: 20px 0 0 0;
+    line-height: 29px;
+}
+
+.Weather ul {
+    margin: 0;
+    padding: 0;
+}
+
+.Weather li {
+    font-size: 16px;
+    font-weight: 100;
+    line-height: 19px;
+    list-style: none;
+}
+
+.Weather img {
+    height: 64px;
+    width:64px;
+    display: inline-block;
+}
+
+.Weather .temperature {
+    font-weight: bold;
+    color:rgb(33,33,33);
+    font-size: 64px;
+    line-height: 64px;
+    font-weight: 400;
+    margin-left: -30px;
+}
+
+.Weather .unit {
+    font-size: 16px;
+    font-weight: 400;
+    color:rgb(33,33,33);
+    position: relative;
+    top: -34px;
+    line-height: 1;
+    margin-left: 5px;
 }
