--- a/src/weather.css
+++ b/src/weather.css
@@ -4,6 +4,7 @@
     padding: 16px;
     border-radius: 4px;
     color: rgb(135, 135, 135);
+    background: linear-gradient(to top, #09203f 0%, #537895 100%);
 }
 
 .Weather h1 {
@@ -32,7 +33,7 @@
 
 .Weather .temperature {
     font-weight: bold;
-    color:rgb(33,33,33);
+    color: #daa520;
     font-size: 64px;
     line-height: 64px;
     font-weight: 400;
@@ -42,9 +43,16 @@
 .Weather .unit {
     font-size: 16px;
     font-weight: 400;
-    color:rgb(33,33,33);
+    color:#daa520;;
     position: relative;
     top: -34px;
     line-height: 1;
     margin-left: 5px;
+}
+
+.Weather .btn-primary {
+    background-color: #09203f;
+    border-color: #09203f;
+    color: #daa520;
+    font-weight: bold;
 }
